sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:14: error: type mismatch;
 found   : Unit
 required: Boolean
           }else if(swapped=false){
                           ^